# OpenCLTutorials

Template/: CMakeLists.txt  DE10Standard.cmake  a10ref.cmake  aoc.cmake  de10standard.cmake
